test/good/generics/basic12.px

func f<V>() V def
    print 'V'

f()
