test/bad/generics/def11.px

func f<T>() T def
    return default(T)

f()
